[gd_scene load_steps=11 format=3 uid="uid://25q0sx8qfei8"]

[ext_resource type="Texture2D" uid="uid://b2wrb85ctsdob" path="res://assets/2D Pixel Dungeon Asset Pack/character and tileset/Dungeon_Tileset.png" id="1_b10id"]
[ext_resource type="Script" path="res://scripts/dungeon_room.gd" id="1_nycd1"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_rooem"]
texture = ExtResource("1_b10id")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0

[sub_resource type="TileSet" id="TileSet_gkpxs"]
sources/0 = SubResource("TileSetAtlasSource_rooem")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_74xva"]
size = Vector2(80, 16.375)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_iedow"]
size = Vector2(16, 48)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2i682"]
size = Vector2(16, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wkwf4"]
size = Vector2(16, 19)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_plskt"]
size = Vector2(20, 16.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_710x1"]
size = Vector2(16, 16)

[node name="dungeonRoom" type="Node2D"]
scale = Vector2(16.364, 14.25)
script = ExtResource("1_nycd1")

[node name="TileMap" type="TileMap" parent="."]
texture_filter = 1
tile_set = SubResource("TileSet_gkpxs")
format = 2
layer_0/tile_data = PackedInt32Array(0, 0, 0, 1, 65536, 0, 2, 131072, 0, 3, 196608, 0, 4, 262144, 0, 6, 131072, 0, 7, 196608, 0, 8, 262144, 0, 9, 65536, 0, 10, 327680, 0, 65536, 0, 1, 131072, 0, 1, 262144, 0, 3, 327680, 0, 3, 393216, 0, 4, 393217, 65536, 4, 393218, 131072, 4, 393219, 196608, 4, 393220, 262144, 4, 393222, 131072, 4, 393223, 196608, 4, 393224, 262144, 4, 393225, 65536, 4, 393226, 327680, 4, 327690, 327680, 3, 262154, 327680, 3, 131082, 327680, 1, 65546, 327680, 1, 65537, 65536, 1, 65545, 262144, 1, 65538, 131072, 1, 65539, 196608, 1, 65540, 131072, 1, 65542, 131072, 1, 65544, 131072, 1, 65541, 196608, 1, 65543, 196608, 1, 131073, 65536, 2, 196609, 65536, 2, 262145, 65536, 2, 327681, 65536, 3, 327689, 262144, 3, 262153, 262144, 2, 196617, 262144, 2, 131081, 262144, 2, 327682, 131072, 3, 327684, 131072, 3, 327686, 131072, 3, 327688, 131072, 3, 327683, 196608, 3, 327685, 196608, 3, 327687, 196608, 3, 262146, 131072, 2, 262148, 131072, 2, 262150, 131072, 2, 262152, 131072, 2, 196611, 131072, 2, 196613, 131072, 2, 196615, 131072, 2, 131074, 131072, 2, 131076, 131072, 2, 131078, 131072, 2, 131080, 131072, 2, 196610, 196608, 2, 131075, 196608, 2, 262147, 196608, 2, 196612, 196608, 2, 262149, 196608, 2, 131077, 196608, 2, 196614, 196608, 2, 131079, 196608, 2, 262151, 196608, 2, 196616, 196608, 2)

[node name="upperWallLeft" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="upperWallLeft"]
position = Vector2(40, 8.375)
shape = SubResource("RectangleShape2D_74xva")

[node name="upperWallRight" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="upperWallRight"]
position = Vector2(136, 8.1875)
shape = SubResource("RectangleShape2D_74xva")

[node name="lowerWallLeft" type="StaticBody2D" parent="."]
position = Vector2(0, 96)

[node name="CollisionShape2D" type="CollisionShape2D" parent="lowerWallLeft"]
position = Vector2(40, 8.375)
shape = SubResource("RectangleShape2D_74xva")

[node name="lowerWallRight" type="StaticBody2D" parent="."]
position = Vector2(0, 96)

[node name="CollisionShape2D" type="CollisionShape2D" parent="lowerWallRight"]
position = Vector2(136, 8.1875)
shape = SubResource("RectangleShape2D_74xva")

[node name="leftWallUpper" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="leftWallUpper"]
position = Vector2(8, 24)
shape = SubResource("RectangleShape2D_iedow")

[node name="leftWallLower" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="leftWallLower"]
position = Vector2(8, 88)
shape = SubResource("RectangleShape2D_iedow")

[node name="leftWallUpper2" type="StaticBody2D" parent="."]
position = Vector2(160, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="leftWallUpper2"]
position = Vector2(8, 23.5)
shape = SubResource("RectangleShape2D_iedow")

[node name="leftWallLower2" type="StaticBody2D" parent="."]
position = Vector2(160, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="leftWallLower2"]
position = Vector2(8, 88)
shape = SubResource("RectangleShape2D_iedow")

[node name="leftDoor" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(8, 56)
texture = ExtResource("1_b10id")
hframes = 10
vframes = 10
frame = 48

[node name="wall" type="Sprite2D" parent="leftDoor"]
texture = ExtResource("1_b10id")
hframes = 10
vframes = 10
frame = 10

[node name="StaticBody2D" type="StaticBody2D" parent="leftDoor"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="leftDoor/StaticBody2D"]
shape = SubResource("RectangleShape2D_2i682")

[node name="rightDoor" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(168, 56)
texture = ExtResource("1_b10id")
hframes = 10
vframes = 10
frame = 47

[node name="wall" type="Sprite2D" parent="rightDoor"]
texture = ExtResource("1_b10id")
hframes = 10
vframes = 10
frame = 15

[node name="StaticBody2D" type="StaticBody2D" parent="rightDoor"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="rightDoor/StaticBody2D"]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_wkwf4")

[node name="topDoor" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(88, 9)
texture = ExtResource("1_b10id")
hframes = 10
vframes = 10
frame = 37

[node name="wall" type="Sprite2D" parent="topDoor"]
position = Vector2(0, -0.75)
scale = Vector2(1, 1.03125)
texture = ExtResource("1_b10id")
hframes = 10
vframes = 10
frame = 1

[node name="StaticBody2D" type="StaticBody2D" parent="topDoor"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="topDoor/StaticBody2D"]
position = Vector2(0, -0.75)
shape = SubResource("RectangleShape2D_plskt")

[node name="bottomDoor" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(88, 104)
texture = ExtResource("1_b10id")
hframes = 10
vframes = 10
frame = 36

[node name="wall" type="Sprite2D" parent="bottomDoor"]
texture = ExtResource("1_b10id")
hframes = 10
vframes = 10
frame = 41

[node name="StaticBody2D" type="StaticBody2D" parent="bottomDoor"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="bottomDoor/StaticBody2D"]
shape = SubResource("RectangleShape2D_710x1")
